# cpp-raykaster

./: .gitignore  CMakeLists.txt  README.md  main.cpp  map.txt
include/engine/: engine.hpp  icontroller.hpp  inputcontroller.hpp
include/graphics/: animation.hpp  spritecontroller.hpp  texturemanager.hpp  window.hpp
include/math/: distance.hpp  to_radians.hpp
include/memory/: observer_ptr.hpp
src/engine/: engine.cpp  inputcontroller.cpp
src/graphics/: animation.cpp  spritecontroller.cpp  texturemanager.cpp  window.cpp
